hphp/hack/test/typecheck/string_cast/string_cast2.php
<?hh // strict

class CNonStringish {}

function test(): void {
  $cnon = new CNonStringish();

  (string) $cnon;
}
